--- a/src/notebooks/disease_predictor_worksheet.ipynb
+++ b/src/notebooks/disease_predictor_worksheet.ipynb
@@ -1601,55 +1601,11 @@
     "    pickle.dump(final_nb_model, nb_file)\n",
     "\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 102,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array(['(vertigo) Paroymsal  Positional Vertigo', 'AIDS', 'Acne',\n",
-       "       'Alcoholic hepatitis', 'Allergy', 'Arthritis', 'Bronchial Asthma',\n",
-       "       'Cervical spondylosis', 'Chicken pox', 'Chronic cholestasis',\n",
-       "       'Common Cold', 'Dengue', 'Diabetes ',\n",
-       "       'Dimorphic hemmorhoids(piles)', 'Drug Reaction',\n",
-       "       'Fungal infection', 'GERD', 'Gastroenteritis', 'Heart attack',\n",
-       "       'Hepatitis B', 'Hepatitis C', 'Hepatitis D', 'Hepatitis E',\n",
-       "       'Hypertension ', 'Hyperthyroidism', 'Hypoglycemia',\n",
-       "       'Hypothyroidism', 'Impetigo', 'Jaundice', 'Malaria', 'Migraine',\n",
-       "       'Osteoarthristis', 'Paralysis (brain hemorrhage)',\n",
-       "       'Peptic ulcer diseae', 'Pneumonia', 'Psoriasis', 'Tuberculosis',\n",
-       "       'Typhoid', 'Urinary tract infection', 'Varicose veins',\n",
-       "       'hepatitis A'], dtype=object)"
-      ]
-     },
-     "execution_count": 102,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "olu_proj",
    "language": "python",
    "name": "python3"
   },
@@ -1663,11 +1619,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13 (main, Aug 25 2022, 18:29:29) \n[Clang 12.0.0 ]"
+   "version": "3.9.13"
   },
   "vscode": {
    "interpreter": {
-    "hash": "5a2d4cade14d351263a337c07585b9c8ef877f8121186e7e0f587eae719241fa"
+    "hash": "c2c1ee0467bc2c38e1e6569e6256c6aadda3dff02f5cfc4243169043891943b1"
    }
   }
  },
